Scroll feature fixed, fixed a few spacing issues, and created a dead link to fix later.

--- a/style.css
+++ b/style.css
@@ -32,3 +32,7 @@ html,
     color: black;
     background-color: rgb(160, 160, 160);
 }
+
+body {
+    overflow: hidden;
+}
